code improvement according to Elena-Bruyako's requirements